fixed scroll error and list spacing

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    overflow: hidden;
 }
 
 .hero img {
@@ -209,7 +210,7 @@ h3 {
     padding-bottom: 10px;
     padding-left: 0px;
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
     flex: 1;
